<resources>
    <string name="app_name">Card Holder</string>
    <string name="default_category_name">All</string>
    <string name="text_dialog_info">Remove the </string>
    <string name="text_dialog_info_card">discount card?</string>
    <string name="text_dialog_info_category">category</string>

    <string name="text_editor_toolbar">Editor</string>
    <string name="save">Save</string>
    <string name="second_code">Second code</string>
    <string name="category">Category</string>
    <string name="add">Add</string>
    <string name="back">Back</string>
    <string name="revert">Revert</string>

    <string name="cancel">Cancel</string>
    <string name="repeat">Repeat</string>
    <string name="open_settings">The application requires access to the camera.\n \nOpen settings and allow access</string>

    <string name="ok">Ok</string>
    <string name="pr_continue">Continue</string>
    <string name="preview">Preview</string>
    <string name="check_data">Check scan data</string>

    <string name="dell">Dell</string>

    <string name="menu_home">Home</string>
    <string name="menu_add">Add</string>
    <string name="menu_category">Category</string>

    <string name="rename_category">Rename category </string>
    <string name="add_category">Add category</string>


    <string name="theme">Theme</string>
    <string name="change_theme_day"><u>Switch to light theme</u></string>
    <string name="change_theme_night"><u>Switch to dark theme</u></string>

    <string name="about_app">About App</string>
    <string name="about_app_text">The application saves data only on your device. After deleting the application or clearing the cache (memory), all information may be lost beyond the control of the developer</string>
    <string name="privacy_policy"><u>Privacy policy</u></string>

    <string name="cooperation">Cooperation</string>
    <string name="github">GitHub</string>
    <string name="powered_by">Powered by</string>
    <string name="name_developer">Konstantin Gridasov</string>

    <string name="shop">Shop</string>
    <string name="input_text">Enter name</string>
    <string name="color">Color</string>

    <string name="front">Front</string>
    <string name="reverse">Reverse</string>
    <string name="title">Title</string>
    <string name="barcode">Barcode</string>
    <string name="optional">(optional)</string>


</resources>