<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.gkreduction.cardholder.ui.dialog.DialogInfoViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent">

        <RelativeLayout
            android:background="@drawable/background_dialog"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100gkdp"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_toolbar"
                style="@style/Style_Text_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_margin="@dimen/_10gkdp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/text_dialog_info"
                android:textColor="@color/color_primary"
                android:textSize="@dimen/_10gkdp" />

            <LinearLayout
                android:layout_marginBottom="@dimen/_10gkdp"
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_25gkdp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/cancel"
                    style="@style/Style_Text_medium"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_25gkdp"
                    android:layout_marginStart="@dimen/_20gkdp"
                    android:layout_weight=".3"
                    android:background="@drawable/background_button_corners"
                    android:text="@string/cancel"
                    android:textAllCaps="false" />

                <View
                    android:layout_width="@dimen/_20gkdp"
                    android:layout_height="match_parent" />

                <Button
                    android:id="@+id/ok"
                    style="@style/Style_Text_medium"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_25gkdp"
                    android:layout_marginEnd="@dimen/_20gkdp"
                    android:layout_weight=".3"
                    android:background="@drawable/background_button_corners"
                    android:text="@string/ok"
                    android:textAllCaps="false" />
            </LinearLayout>

        </RelativeLayout>
    </RelativeLayout>
</layout>