<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_top"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.3" />


        <LinearLayout
            android:id="@+id/ll_text"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100gkdp"
            android:layout_marginStart="@dimen/_7gkdp"
            android:layout_marginEnd="@dimen/_5gkdp"
            android:layout_marginBottom="@dimen/_10gkdp"
            android:background="@drawable/background_button_corners"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/gl_top">

            <TextView
                android:id="@+id/tv_dialog"
                style="@style/Style_Text_medium"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_7gkdp"
                android:layout_marginEnd="@dimen/_5gkdp"
                android:gravity="center_vertical"
                android:text="@string/open_settings"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="@dimen/_11gkdp" />
        </LinearLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/ok"
            style="@style/Style_Text_medium"
            android:layout_width="@dimen/_75gkdp"
            android:layout_height="@dimen/_30gkdp"
            android:layout_marginStart="@dimen/_15gkdp"
            android:layout_marginTop="@dimen/_5gkdp"
            android:background="@drawable/background_button_corners"
            android:text="@string/pr_continue"
            android:textAllCaps="false"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/_9gkdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_text" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancel"
            style="@style/Style_Text_medium"
            android:layout_width="@dimen/_75gkdp"
            android:layout_height="@dimen/_30gkdp"
            android:layout_marginTop="@dimen/_5gkdp"
            android:layout_marginEnd="@dimen/_15gkdp"
            android:background="@drawable/background_button_corners"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textSize="@dimen/_9gkdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_text" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>