<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_top"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.3" />

        <LinearLayout
            android:id="@+id/ll_text"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100gkdp"
            android:layout_marginStart="@dimen/_5gkdp"
            android:layout_marginEnd="@dimen/_5gkdp"
            android:background="@drawable/background_button_corners"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/gl_top">

            <TextView
                android:id="@+id/tv_name"
                style="@style/Style_Text_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginStart="@dimen/_5gkdp"
                android:layout_marginTop="@dimen/_10gkdp"
                android:layout_marginEnd="@dimen/_5gkdp"
                android:layout_marginBottom="@dimen/_5gkdp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/add_category"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="@dimen/_12gkdp" />

            <EditText
                android:id="@+id/et_category_name"
                style="@style/StyleNameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="start|center_vertical"
                android:textSize="@dimen/_12gkdp"
                app:layout_constraintEnd_toEndOf="@id/vertical80"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/ok"
            style="@style/StyleDialogButton"
            android:text="@string/save"
            android:background="@drawable/background_button_corners"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_text" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancel"
            style="@style/StyleDialogButton"
            android:background="@drawable/background_button_corners"
            android:text="@string/cancel"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_text" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>